правки от дизайнера +отправка формы

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -53,6 +53,9 @@
             <div class="nav__items-wrapper j-nav__items-wrapper">
                 <div class="nav__decoration"></div>
                 <ul class="nav__items">
+                    <a href="#" class="link">
+                        <img src="../images/logo.svg" alt="Логотип" class="header__logo" />
+                    </a>
                     <li> <a href="./calc.html" class="main__menu_item">Калькулятор стоимости</a>
                     </li>
                     <li> <a href="./kviz.html" class="main__menu_item">Помощник выбора бетона</a>
@@ -91,7 +94,7 @@
                     </div>
                     <div class="quest__form">
                         <h2 class="title">Остались вопросы?</h2><span class="quest__sub-text">Пишите, звоните, заходите на кофе. Мы всегда вам рады.</span>
-                        <form id="formContact" class="form" action="">
+                        <form id="formContact" class="form" action="#">
                             <div class="form__input-block">
                                 <div class="form__input-area">
                                     <input type="text" name="userName"><span class="form__input-placeholder">Имя</span>
@@ -125,6 +128,7 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
         <script src="../vendor/plugins/jquery/ui/jquery-ui.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+        <script src="../js/form.js"></script>
         <script src="../js/header.js"></script>
     </body>
 
