--- a/pages/price.html
+++ b/pages/price.html
@@ -54,6 +54,9 @@
         <div class="nav__items-wrapper j-nav__items-wrapper">
             <div class="nav__decoration"></div>
             <ul class="nav__items">
+                <a href="#" class="link">
+                    <img src="../images/logo.svg" alt="Логотип" class="header__logo" />
+                </a>
                 <li> <a href="./calc.html" class="main__menu_item">Калькулятор стоимости</a>
                 </li>
                 <li> <a href="./kviz.html" class="main__menu_item">Помощник выбора бетона</a>
