--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
       </div>
       <div class="nav__items-wrapper j-nav__items-wrapper">
         <div class="nav__decoration"></div>
+
         <ul class="nav__items">
+          <a href="#" class="link">
+            <img src="./images/logo.svg" alt="Логотип" class="header__logo" />
+          </a>
           <li> <a href="./pages/calc.html" class="main__menu_item">Калькулятор стоимости</a>
           </li>
           <li> <a href="./pages/kviz.html" class="main__menu_item">Помощник выбора бетона</a>
@@ -70,7 +74,6 @@
 
   <script src="./vendor/plugins/jquery/3.6.0/jquery-3.6.0.min.js"></script>
   <script src="./vendor/plugins/jquery/ui/jquery-ui.min.js"></script>
-  <script src="./vendor/plugins/jquery/ui/jquery-ui.touch-punch.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
