--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -31,6 +31,9 @@
         <div class="nav__items-wrapper j-nav__items-wrapper">
             <div class="nav__decoration"></div>
             <ul class="nav__items">
+                <a href="#" class="link">
+                    <img src="../images/logo.svg" alt="Логотип" class="header__logo" />
+                </a>
                 <li> <a href="./calc.html" class="main__menu_item">Калькулятор стоимости</a>
                 </li>
                 <li> <a href="./kviz.html" class="main__menu_item">Помощник выбора бетона</a>
@@ -138,8 +141,10 @@
 <script src="../vendor/plugins/jquery/3.6.0/jquery-3.6.0.min.js"></script>
 <script src="../vendor/plugins/jquery/ui/jquery-ui.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.3.2/js/lightgallery.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
 <script src="../js/gallery.js"></script>
+<script src="../js/header.js"></script>
 </body>
 </html>
