стили в контактах и прайс

--- a/pages/kviz.html
+++ b/pages/kviz.html
@@ -246,9 +246,9 @@
                                     </div>
                                 </div>
                                 <div class="form__price-block"> <span>Общая стоимость</span><span class="form__price j-form__price"></span>
-                                    <span class="form__description form__description--desc">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по&nbspтелефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
+                                    <span class="form__description form__description--desc">Цена рассчитана по <a class="contacts__list_item-price" href="/price.pdf" target="_blank">прайсу</a>. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по&nbspтелефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
                                 </div>
-                                <div class="form__button-block"> <span class="form__description">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по телефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
+                                <div class="form__button-block"> <span class="form__description">Цена рассчитана по <a class="contacts__list_item-price" href="/price.pdf" target="_blank">прайсу</a>. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по телефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
                                     <button class="btn btn--orange" type="submit">Отправить заявку</button>
                                 </div>
                             </form>
