--- a/pages/price.html
+++ b/pages/price.html
@@ -74,7 +74,7 @@
     </nav>
 </header>
 <main class="main">
-    <section class="contact">
+    <section class="">
         <div class="contact__wrapper">
             <h1 class="main-title title__price">Цены <br> и доставка</h1>
             <p class="title__description">
