цифры из апи со счетчиком

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="main__number">
-          <span class="j-main__number">233</span>
+          <span id="numbers" class="j-main__number"></span>
           <span class="main__text">Мы — Конкрид. Наши заводы производят бетон высокого качества по европейским стандартам. Мы используем на наших заводах современное оборудование
             и системы автоматизации, а также разработали собственный софт для учета и организации производственных процессов.
           </span>
