--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -130,6 +130,9 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
         <script src="../js/form.js"></script>
         <script src="../js/header.js"></script>
+        <?
+            include '../js/sendmail.php';
+        ?>
     </body>
 
 </html>
